Fix font size hour display on small screen (2)

--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ body {
 @media screen and (max-width: 528px) {
 
     .wrapper-grid .hour {
-        font-size: 15vw;
+        font-size: 2.6rem;
     }
 
     .wrapper-grid .format-wrapper {
